--- a/packet.html
+++ b/packet.html
@@ -13,7 +13,13 @@
                 border: solid;
             }
             .four {
+                width: 200px;
+            }
+            .eight {
                 width: 400px;
+            }
+            .sixteen {
+                width: 800px;
             }
         </style>
     </head>
@@ -25,8 +31,8 @@
             <tr>
                 <td class="four">version</td>
                 <td class="four">header length</td>
-                <td class="four">service</td>
-                <td class="four">packet length</td>
+                <td class="eight">service</td>
+                <td class="sixteen">packet length</td>
             </tr>
             <tr>
                 <td></td>
